--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,191 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+    --color-white: #fff;
+    --color-whitelight: #f5f5f5;
+    --color-whitelight02: #efefef;
+    --coloractive: #8bc53f;
+    --color-red: #ee1f37;
+    --color-blue: #107290;
+    --color-black: #444;
+    --color-grey: #aaa;
+    --color-yellow: #fba81a;
+    --color-normal-dark: #257434;
+    --color-hilife: #cec1a7;
+    --color-normal: #2d3d4a;
+    --bg-black: #000;
+    --bgactive: rgba(3, 30, 52, 1);
+    --bgactive10: rgba(3, 30, 52, 0.1);
+    --bgactive20: rgba(3, 30, 52, 0.2);
+    --bgactive30: rgba(3, 30, 52, 0.3);
+    --bgactive40: rgba(3, 30, 52, 0.4);
+    --bgactive50: rgba(3, 30, 52, 0.5);
+    --bgactive60: rgba(3, 30, 52, 0.6);
+    --bgactive70: rgba(3, 30, 52, 0.7);
+    --bgactive80: rgba(3, 30, 52, 0.8);
+    --bgactive90: rgba(3, 30, 52, 0.9);
+    --bgactive0: rgba(3, 30, 52, 0);
+    --color-white0: rgba(255, 255, 255, 0);
+    --color-white10: rgba(255, 255, 255, 0.1);
+    --color-white20: rgba(255, 255, 255, 0.2);
+    --color-white30: rgba(255, 255, 255, 0.3);
+    --color-white40: rgba(255, 255, 255, 0.4);
+    --color-white50: rgba(255, 255, 255, 0.5);
+    --color-white60: rgba(255, 255, 255, 0.6);
+    --color-white70: rgba(255, 255, 255, 0.7);
+    --color-white80: rgba(255, 255, 255, 0.8);
+    --color-white90: rgba(255, 255, 255, 0.9);
+    --color-black0: rgba(0, 0, 0, 0);
+    --color-black5: rgba(0, 0, 0, 0.05);
+    --color-black10: rgba(0, 0, 0, 0.1);
+    --color-black20: rgba(0, 0, 0, 0.2);
+    --color-black30: rgba(0, 0, 0, 0.3);
+    --color-black40: rgba(0, 0, 0, 0.4);
+    --color-black50: rgba(0, 0, 0, 0.5);
+    --color-black60: rgba(0, 0, 0, 0.6);
+    --color-black70: rgba(0, 0, 0, 0.7);
+    --color-black80: rgba(0, 0, 0, 0.8);
+    --color-black90: rgba(0, 0, 0, 0.9);
+    --color-bg-gradient: linear-gradient(0deg, rgba(3, 30, 52, 0.3) 0%, rgba(255, 255, 255, 0.5) 100%);
+    --color-bg-black: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0) 100%);
+    --bg-current: linear-gradient(0deg, rgba(3, 30, 52, 0.2) 0%, rgba(3, 30, 52, 0) 100%);
+    --bg-gradient: linear-gradient(180deg, rgba(255, 119, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 100%);
+    --bg-banner: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0) 100%);
+    --bg-bg: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.2) 100%);
+    --bg-thumb: linear-gradient(0deg, rgba(3, 30, 52, 1) 0%, rgba(3, 30, 52, 0) 100%);
+    --bg-wrap: linear-gradient(180deg, rgba(3, 30, 52, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
+    --gradient-white: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    --titleBig: 4.3rem;
+    --titleMedium: clamp(26px, 3vw, 48px);
+    --titleFont: clamp(26px, 3vw, 60px);
+    --titleSmall: clamp(26px, 1.6vw, 34px);
+    --fontText: 1.5rem;
+    --fontContent: 1.1rem;
+    --wraplarge: 100vw;
+    --wrapcontent: 82vw;
+    --wrapsmall: 50vw;
+    --small-line: 10px;
+    --widthmenu: 38vw;
+}
+
 html{
     font-size: 1vw;
+}
+
+.close-pics-span circle, .view-details circle {
+    stroke-dasharray: 265;
+    stroke-dashoffset: 265;
+    transition: stroke-dashoffset 1.2s, transform 1.2s;
+    transform-origin: 50% 50%;
+    stroke-width: 1;
+}
+
+.view-details circle {
+    stroke: var(--bgactive);
+}
+
+.view-details.is-inview svg circle:first-child {
+    stroke-dashoffset: 22px;
+}
+
+.view-details circle:last-child {
+    transform: rotate(-45deg);
+}
+
+.slidebox-arrow.is-inview svg, .view-details.is-inview svg {
+    transform: rotate(0);
+}
+
+.view-details svg {
+    pointer-events: none;
+}
+
+.view_i {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 1.625rem;
+    height: .9375rem;
+    margin: -.46875rem 0 0 -.8125rem;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.view_i::after, .view_i::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform .3s;
+}
+
+.view-details .view_i::before {
+    background: url(../public/arrow-details-blue.svg) no-repeat center center / contain;
+}
+
+.view_i::after {
+    transform: translateX(-120%);
+}
+
+.view-details .view_i::after {
+    background: url(../public/arrow-details-blue.svg) no-repeat center center / contain;
+}
+
+.view-details.is-inview:hover svg circle:first-child {
+    stroke-dashoffset: 265;
+    transform: rotate(360deg);
+}
+
+.view-details.is-inview:hover svg circle {
+    transition: stroke-dashoffset .8s, transform .8s;
+}
+
+.view-details.is-inview:hover svg circle:last-child {
+    stroke-dashoffset: 22;
+    transform: rotate(360deg);
+}
+
+.view-details.is-inview:hover svg circle {
+    transition: stroke-dashoffset .8s, transform .8s;
+}
+
+.view-details>span {
+    position: absolute;
+    display: block;
+    /* color: var(--color-white); */
+    font-size: 1rem;
+    font-weight: 400;
+    left: 100%;
+    top: 50%;
+    transform: translate(100%, -50%);
+    white-space: nowrap;
+    text-transform: uppercase;
+}
+
+.view-details.is-inview>span {
+    transform: translate(1.5rem, -50%);
+}
+
+.slidebox-arrow.is-inview .text span, .view-details.is-inview>span span {
+    transform: translateX(0) scale(1);
+}
+
+.view-details>span span {
+    transition: transform 1s;
+    display: block;
+    transform: translateX(-120%) scale(1.2);
+}
+
+.view-details:hover .view_i::before {
+    transform: translateX(120%);
+    transition: transform .3s;
+}
+
+.view-details:hover .view_i::after {
+    transform: translateX(0);
+    transition: transform .3s;
 }
