--- a/styles/globals.css
+++ b/styles/globals.css
@@ -223,3 +223,18 @@ html{
     font-weight: 300;
     margin: 0 0 1.8rem;
 }
+
+/* News */
+
+.view-more a::after, .view-more button::after {
+    content: '';
+    position: relative;
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    border-bottom: 5px solid transparent;
+    margin: 0 0 0 10px;
+    opacity: .7;
+}
