--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,3 +267,34 @@ html{
     position: relative;
     margin: 0 0 1rem;
 }
+
+/* News Detail */
+
+.news-detail-page .load-title h2, 
+.news-detail-page .load-title h3 {
+
+    font-size: max(1.5rem, 28px);
+    text-transform: uppercase;
+    color: var(--bgactive);
+    padding: 0 1.5rem;
+    text-align: center;
+}
+
+.news-detail-page .box-text h3, .news-detail-page .load-title h2, .news-detail-page .load-title h3{
+    position: relative;
+    display: block;
+    height: auto;
+    font-weight: 700;
+}
+
+.load-text h2, .load-text h3, .load-text h4, .load-text p{
+    position: relative;
+    display: block;
+    margin: 0 0 1.5rem;
+    padding: 0 3vw;
+}
+
+.load-text p {
+    margin: 0 0 1.8rem;
+    font-size: 1.1rem;
+}
