--- a/styles/globals.css
+++ b/styles/globals.css
@@ -245,7 +245,7 @@ h1,h2 {
 
 /* News */
 
-.view-more a::after, .view-more button::after {
+.view-more a::after, .view-more button::after, .view-more span::after {
     content: '';
     position: relative;
     display: block;
@@ -315,6 +315,12 @@ h1,h2 {
     display: block;
     margin: 0 0 1.5rem;
     padding: 0 3vw;
+}
+
+.load-text p img {
+    display: block;
+    text-align: center;
+    width: 100%;
 }
 
 .load-text h1{}
@@ -504,7 +510,141 @@ h1,h2 {
     content: "Trang:"
 }
 
+.news-detail-page .item-news{
+    padding: 10px 10px 70px;
+    margin: 0;
+}
+
+.news-detail-page .txt-news{
+    padding: 0 8px;
+}
+
+.news-detail-page .view-more{
+    position: absolute;
+    bottom: 20px;
+    left: 22px;
+    margin: 0;
+}
+
+.news-detail-page .view-more span{
+    font-size: 14px;
+}
+
 .news-detail-page .item-news.current {
     pointer-events: none;
     background: var(--bg-current);
+}
+
+.new-slide-relative .date-thumb{
+    text-align: left;
+}
+
+.print, .share-item ul {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 0;
+    text-align: center;
+}
+
+.print-box {
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 7px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px var(--color-black10);
+}
+
+.load-text ul li::before, .print-box {
+    position: relative;
+    display: inline-block;
+}
+
+.print-but, .save-but, .share-but {
+    padding: 0 20px 0 10px;
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+    height: 50px;
+    line-height: 50px;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: var(--bgactive);
+    border-radius: 6px;
+    background: 0 0;
+    z-index: 1;
+}
+
+.print-but::before {
+    background: url(../public/print.svg) no-repeat 50% / 80%;
+}
+
+.print-but::before, .save-but::before, .share-but::before {
+    content: '';
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    opacity: .8;
+}
+
+.share-but::before {
+    background: url(../public/share.svg) no-repeat 50% / 80%;
+}
+
+.share-item {
+    position: absolute;
+    right: -100%;
+    bottom: 15px;
+    width: 100%;
+    height: 40px;
+}
+
+@media (hover: hover) and (pointer: fine) and (min-width: 1100px){
+    
+    .download-pdf-subscribe, .input-but button, .print-box>button, .share-item a, .view-album, .view-album::after, .view-album::before, .view-degree, .view-degree::after, .view-pdf, .view-pdf::after, .view-pdf::before, .view-video, .view-video::after, .view-video::before {
+        transition: all .3s ease-in-out;
+    }
+    
+    .print-box>button.active, .print-box>button:hover, .share-item a:hover {
+        background-color: var(--bgactive);
+        color: var(--color-white);
+    }
+}
+
+.share-item ul {
+    width: auto;
+    text-align: left;
+    padding: 0 0 0 10px;
+}
+
+.share-but.active+.share-item li {
+    transform: scale3d(1, 1, 1);
+    left: 0;
+    opacity: 1;
+}
+
+.share-item li {
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin: 0 3px;
+    transform: scale3d(0, 1, 1);
+    transform-origin: left top;
+    left: -40px;
+    opacity: 0;
+}
+
+.print-but:hover::before {
+    background: url(../public/print2.svg) no-repeat 50% / 80%;
+    opacity: 1;
+}
+
+.share-but:hover::before {
+    background: url(../public/share2.svg) no-repeat 50% / 80%;
+    opacity: 1;
 }
