--- a/styles/globals.css
+++ b/styles/globals.css
@@ -648,3 +648,23 @@ h1,h2 {
     background: url(../public/share2.svg) no-repeat 50% / 80%;
     opacity: 1;
 }
+
+/* Product Page */
+
+.category-product-page .load-news-list{
+    margin: -14.5px;
+}
+
+.category-product-page .item-product-category{
+    width: calc((100% / 2) - 29px);
+    margin: 14.5px;
+}
+
+.category-product-page .product-category-text{
+    width: 100%;
+    height: auto;
+    bottom: 0;
+    left: 0;
+    padding: 3rem;
+    z-index: 12;
+}
