--- a/styles/globals.css
+++ b/styles/globals.css
@@ -478,6 +478,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     position: relative;
     display: inline-block;
 }
+
+.download-pdf, .footer {
+    width: auto;
+    z-index: 100;
+}
+
 .footer {
     display: block;
     width: 100%;
@@ -488,10 +494,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     z-index: 2;
 }
 
-.download-pdf, .footer {
-    width: auto;
-    z-index: 100;
-}
 
 
 .box-footer.on-show, .item-search.on-show{
@@ -501,7 +503,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     animation-fill-mode: forwards;
 }
 
-.box-footer, .wrap-box-footer {
+.footer-botom, .box-footer, .wrap-box-footer {
     position: relative;
     display: block;
     width: 100%;
@@ -573,12 +575,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     margin: 2rem 0;
 }
 
-.box-footer .company-info li {
-    width: auto;
-    max-width: 30%;
-    margin: 2rem 0;
-}
-
 .company-text ul li {
     display: flex;
     position: relative;
@@ -596,6 +592,174 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     height: 26px;
     display: inline-block;
     margin: 0 13px 0 0;
+}
+
+.company-text ul li, .list-term-footer ul, .menu-footer ul {
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.company-text ul li {
+    display: flex;
+    position: relative;
+    margin: 0 0 15px;
+}
+
+.box-footer .company-text a {
+    width: calc(100% - 2.8rem);
+    padding-left: .5rem;
+    font-size: 2.2em;
+    font-weight: 100;
+}
+
+.company-text a, .company-text p {
+    position: relative;
+    display: block;
+    color: inherit;
+}
+
+.box-footer .company-info li::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 60%;
+    top: 20%;
+    right: -6rem;
+    background-color: var(--bgactive30);
+}
+
+.center-footer{
+    position: relative;
+    margin: 2rem 0;
+    padding: 2rem 0;
+    overflow: hidden;
+}
+
+.center-footer::before {
+    top: 0;
+}
+
+.center-footer::after, .center-footer::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+    background-color: var(--bgactive20);
+}
+
+.list-term-footer, .menu-footer, .social-footer {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.menu-footer {
+    font-size: 1vw;
+    line-height: 1.6;
+}
+
+.list-term-footer ul, .menu-footer ul, .social-footer ul {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+}
+
+.menu-footer ul li a.current {
+    font-weight: 700;
+    pointer-events: none;
+}
+
+.menu-footer ul li a {
+    display: inline-block;
+    font-size: 1.2rem;
+    padding: 0;
+}
+
+.list-term-footer ul li a, .list-term-footer ul li button, .menu-footer ul li a {
+    position: relative;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--bgactive);
+}
+
+.list-term-footer ul, .menu-footer ul, .social-footer ul{
+    position: relative;
+    display: flex;
+    overflow: hidden;
+}
+
+.social-footer ul li {
+    margin: 0 1rem;
+}
+
+.list-term-footer ul .link-footer {
+    margin: 0 2.4rem 0 0;
+}
+
+.list-term-footer ul li a, .list-term-footer ul li button {
+    display: flex;
+    font-size: 1em;
+    line-height: 1;
+}
+
+.list-term-footer ul .link-footer::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 75%;
+    top: .1rem;
+    right: -1.2rem;
+    background-color: var(--bgactive);
+}
+
+.footer-bottom {
+    height: auto;
+    padding: 0;
+    z-index: 2;
+}
+
+.career-wrap, .copyright, .left-footer, .social-footer ul li, .social-footer ul li a {
+    position: relative;
+    display: block;
+}
+
+.left-footer {
+    width: 100%;
+    text-align: center;
+}
+
+.copyright p, .left-footer a {
+    font-size: min(.9em,14px);
+    text-transform: uppercase;
+    display: block;
+    line-height: 1.4;
+}
+
+.left-footer a {
+    margin: 0 0 15px;
+    color: currentColor;
+}
+
+.copyright {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: var(--bgactive);
+    z-index: 20;
+    width: auto;
+}
+
+.career-wrap, .copyright, .left-footer, .social-footer ul li, .social-footer ul li a {
+    position: relative;
+    display: block;
+}
+
+.copyright p, .left-footer a {
+    font-size: min(.9em,14px);
+    text-transform: uppercase;
+    display: block;
+    line-height: 1.4;
 }
 
 /* Footer End */
@@ -1504,6 +1668,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     .copyright a:hover, .small-nav-item .nav-item-a:hover {
         color: var(--bgactive);
     }
+
+    .left-footer a, .list-term-footer ul li a, .list-term-footer ul li button, .menu-footer ul li a, .nav-item .nav-item-a, .social li a, .social li button, .social-footer ul li a{
+        transition: color .3s ease-in-out;
+    }
 }
 
 @media screen and (min-width: 1100px){
@@ -1534,6 +1702,76 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
         animation-duration: 1.2s;
         animation-delay: .3s;
         animation-fill-mode: forwards;
+    }
+
+    .box-footer.on-show .company-info li, .box-footer.on-show .list-term-footer ul li, .box-footer.on-show .menu-footer ul li, .box-footer.on-show .social-footer ul li {
+        animation-name: fadeInUp;
+        animation-duration: 1.2s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+    }
+
+    /* .box-footer .company-info li, .header.hide .logo-main-white, .header.hide .logo-sub-white, .list-term-footer ul li, .menu-footer ul li, .social-footer ul li {
+        opacity: 0;
+    } */
+
+    .box-footer.on-show .company-info li::after {
+        animation-name: scaleSmallY;
+        animation-delay: 1.2s;
+    }
+
+    .box-footer.on-show .company-info li::after, .header.show .logo {
+        animation-name: fadeIn;
+        animation-duration: 1s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+    }
+
+    .box-footer .company-info li::after {
+        transform: scaleY(0);
+    }
+
+    @keyframes scaleSmallX{
+
+        0% {
+            transform: scaleX(0);
+        }
+        100% {
+            transform: none;
+        }
+        
+    }
+
+    @keyframes fadeInUp{
+        0% {
+            opacity: 0;
+            transform: translate3d(0, 150px, 0);
+        }
+        100% {
+            opacity: 1;
+            transform: none;
+        }
+    }
+
+    .box-footer.on-show .center-footer::after, .box-footer.on-show .center-footer::before{
+        animation-name: scaleSmallX;
+        animation-duration: 1.5s;
+        animation-delay: .5s;
+        animation-fill-mode: forwards;
+    
+    }
+
+    .menu-footer ul li {
+        margin: 0 2rem 0 0;
+    }
+
+    .center-footer::after, .center-footer::before{
+        transform: scaleX(0);
+    
+    }
+
+    .center-footer::after {
+        bottom: 0;
     }
 }
 
@@ -1810,6 +2048,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
         display: block;
         top: auto;
         left: auto
+    }
+
+    .box-footer .company-info li::after {
+        right: -4rem;
     }
 
 }
